--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-gridfs": "^1.5.0"
+    "multer-storage-gridfs": "^1.5.0",
+    "urlencode": "^2.0.0"
   }
 }
